--- a/index.html
+++ b/index.html
@@ -26,47 +26,88 @@
     <header class="header">
       <div class="container">
         <nav class="nav">
-          <ul class="nav__list">
-            <li class="nav__logo">
-              <a class="logo" href="./index.html">
-                <span class="logo__web">Web</span
-                ><span class="logo__studio">Studio</span>
-              </a>
-            </li>
-            <!-- навигация по сайту -->
-            <li class="nav__item">
-              <a class="headar__link link current" href="./index.html"
-                >Студія</a
-              >
-            </li>
-            <li class="nav__item">
-              <a class="headar__link link" href="./portfolio.html">Портфоліо</a>
-            </li>
-            <li class="nav__item">
-              <a class="headar__link link" href="#">Контакти</a>
-            </li>
-          </ul>
-          <ul class="nav__contacts-list contacts-list">
-            <li class="contacts-list__item">
-              <a
-                class="contacts-list__link-icon link"
-                href="mailto:info@devstudio.com"
-              >
-                <svg class="contacts__icon" width="16px" height="12px">
-                  <use href="./images/icons.svg#icon-envelope"></use>
-                </svg>
-                info@devstudio.com
-              </a>
-            </li>
-            <li class="contacts-list__item">
-              <a class="contacts-list__link-icon link" href="tel:+380961111111">
-                <svg class="contacts__icon" width="10px" height="16px">
-                  <use href="./images/icons.svg#icon-smartphone"></use>
-                </svg>
-                +38 096 111 11 11
-              </a>
-            </li>
-          </ul>
+          <a class="nav__logo logo" href="./index.html">
+            <span class="logo__web">Web</span
+            ><span class="logo__studio">Studio</span>
+          </a>
+          <div class="menu-container" id="menu-container" data-menu>
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="headar__link link current" href="./index.html"
+                  >Студія</a
+                >
+              </li>
+              <li class="nav__item">
+                <a class="headar__link link" href="./portfolio.html"
+                  >Портфоліо</a
+                >
+              </li>
+              <li class="nav__item">
+                <a class="headar__link link" href="#">Контакти</a>
+              </li>
+            </ul>
+            <div class="nav__contacts-list contacts-list">
+              <div class="contacts-box">
+                <div class="contacts-list__item">
+                  <a
+                    class="contacts-list__link-icon link"
+                    href="mailto:info@devstudio.com"
+                  >
+                    <svg class="contacts__icon" width="16px" height="12px">
+                      <use href="./images/icons.svg#icon-envelope"></use>
+                    </svg>
+                    info@devstudio.com
+                  </a>
+                </div>
+                <div class="contacts-list__item">
+                  <a
+                    class="contacts-list__link-icon link"
+                    href="tel:+380961111111"
+                  >
+                    <svg class="contacts__icon" width="10px" height="16px">
+                      <use href="./images/icons.svg#icon-smartphone"></use>
+                    </svg>
+                    +38 096 111 11 11
+                  </a>
+                </div>
+              </div>
+
+              <ul class="contacts-list__socseti">
+                <li class="contacts-list__socseti-item">
+                  <a class="contacts__socseti" href="">Instagram</a>
+                </li>
+                <li class="contacts-list__socseti-item">
+                  <a class="contacts__socseti" href="">Twitter</a>
+                </li>
+                <li class="contacts-list__socseti-item">
+                  <a class="contacts__socseti" href="">Facebook</a>
+                </li>
+                <li class="contacts-list__socseti-item">
+                  <a class="contacts__socseti" href="">LinkedIn</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <button
+            type="button"
+            class="menu-button"
+            aria-expanded="false"
+            aria-controls="menu-container"
+            data-menu-button
+          >
+            <svg width="40" height="40" aria-label="Перемикач мобільного меню">
+              <use
+                class="icon-close"
+                href="./images/icons.svg#icon-close_40px"
+              ></use>
+              <use
+                class="icon-menu"
+                href="./images/icons.svg#icon-menu_40px"
+              ></use>
+            </svg>
+          </button>
+
+          <!-- навигация по сайту и контакты -->
         </nav>
       </div>
     </header>
@@ -148,26 +189,36 @@
           <ul class="products__list">
             <li class="products__item">
               <img
+                srcset="
+                  ./images/a-person-types-code-on-a-keyboard.jpg    1x,
+                  ./images/2X-a-person-types-code-on-a-keyboard.jpg 2x
+                "
                 src="./images/a-person-types-code-on-a-keyboard.jpg"
                 alt="людина вводить код на клавіатурі"
                 width="370"
-                height="294"
               />
               <p class="products__desc">Десктопні додатки</p>
             </li>
 
             <li class="products__item">
               <img
+                srcset="
+                  ./images/human-compares-types-of-markups-for-mobile.jpg    1x,
+                  ./images/2X-human-compares-types-of-markups-for-mobile.jpg 2x
+                "
                 src="./images/human-compares-types-of-markups-for-mobile.jpg"
                 alt="людина порівнює типи розмітки для мобільного"
                 width="370"
-                height="294"
               />
               <p class="products__desc">Мобільні додатки</p>
             </li>
 
             <li class="products__item">
               <img
+                srcset="
+                  ./images/person-chooses-color-on-tablet.jpg    1x,
+                  ./images/2X-person-chooses-color-on-tablet.jpg 2x
+                "
                 src="./images/person-chooses-color-on-tablet.jpg"
                 alt="людина вибирає колір на планшеті"
                 width="370"
@@ -185,12 +236,31 @@
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list">
             <li class="team__card">
-              <img
-                src="./images/photography-product-designer.jpg"
-                alt="фото продукт дизайнера"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/photography-product-designer.jpg    1x,
+                    ./images/2Х-photography-product-designer.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/tablet/img-1-T.jpg    1x,
+                    ./images/tablet/img-1-T-2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <img
+                  srcset="
+                    ./images/mobile/img-1-M.jpg    1x,
+                    ./images/mobile/img-1-M-2x.jpg 2x
+                  "
+                  src="./images/photography-product-designer.jpg"
+                  alt="фото продукт дизайнера"
+                  width="270"
+                />
+              </picture>
               <div class="team__desc">
                 <h3 class="team__name">Ігор Дем'яненко</h3>
                 <p class="description team__profession" lang="en">
@@ -236,12 +306,31 @@
             </li>
 
             <li class="team__card">
-              <img
-                src="./images/photography-frontend-developer.jpg"
-                alt="фото фронтенд-розробника"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/photography-frontend-developer.jpg    1x,
+                    ./images/2Х-photography-frontend-developer.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/tablet/img-2-T.jpg    1x,
+                    ./images/tablet/img-2-T-2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <img
+                  srcset="
+                    ./images/mobile/img-2-M.jpg    1x,
+                    ./images/mobile/img-2-M-2x.jpg 2x
+                  "
+                  src="./images/photography-frontend-developer.jpg"
+                  alt="фото фронтенд-розробника"
+                  width="270"
+                />
+              </picture>
               <div class="team__desc">
                 <h3 class="team__name">Ольга Рєпіна</h3>
                 <p class="description team__profession" lang="en">
@@ -287,12 +376,32 @@
             </li>
 
             <li class="team__card">
-              <img
-                src="./images/photography-marketing.jpg"
-                alt="фото маркетолога"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/photography-marketing.jpg    1x,
+                    ./images/2Х-photography-marketing.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/tablet/img-3-T.jpg    1x,
+                    ./images/tablet/img-3-T-2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <img
+                  srcset="
+                    ./images/mobile/img-3-M.jpg    1x,
+                    ./images/mobile/img-3-M-2x.jpg 2x
+                  "
+                  src="./images/photography-marketing.jpg"
+                  alt="фото маркетолога"
+                  width="270"
+                />
+              </picture>
+
               <div class="team__desc">
                 <h3 class="team__name" lang="en">Микола Тарасов</h3>
                 <p class="description team__profession">Marketing</p>
@@ -336,12 +445,31 @@
             </li>
 
             <li class="team__card">
-              <img
-                src="./images/photography-ui-designer.jpg"
-                alt="фото ui-дизайнер"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/photography-ui-designer.jpg    1x,
+                    ./images/2Х-photography-ui-designer.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/tablet/img-4-T.jpg    1x,
+                    ./images/tablet/img-4-T-2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <img
+                  srcset="
+                    ./images/mobile/img-4-M.jpg    1x,
+                    ./images/mobile/img-4-M-2x.jpg 2x
+                  "
+                  src="./images/photography-ui-designer.jpg"
+                  alt="фото ui-дизайнер"
+                  width="270"
+                />
+              </picture>
               <div class="team__desc">
                 <h3 class="team__name">Михайло Єрмаков</h3>
                 <p class="description team__profession" lang="en">
@@ -388,58 +516,58 @@
           </ul>
         </div>
       </section>
-    </main>
 
-    <!-- постоянные клиенты -->
-    <section class="clients section">
-      <div class="container">
-        <h2 class="clients__title">Постійні клієнти</h2>
-        <ul class="clients__list-sites">
-          <li class="clients__item">
-            <a class="clients__sites" href=""
-              ><svg class="clients__icon-clients" width="41px" height="47px">
-                <use href="./images/icons.svg#icon-client-logo-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="clients__item">
-            <a class="clients__sites" href=""
-              ><svg class="clients__icon-clients" width="40px" height="52px">
-                <use href="./images/icons.svg#icon-client-logo-2"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="clients__item">
-            <a class="clients__sites" href=""
-              ><svg class="clients__icon-clients" width="43px" height="41px">
-                <use href="./images/icons.svg#icon-client-logo-3"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="clients__item">
-            <a class="clients__sites" href=""
-              ><svg class="clients__icon-clients" width="84px" height="41px">
-                <use href="./images/icons.svg#icon-client-logo-4"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="clients__item">
-            <a class="clients__sites" href=""
-              ><svg class="clients__icon-clients" width="63px" height="45px">
-                <use href="./images/icons.svg#icon-client-logo-5"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="clients__item">
-            <a class="clients__sites" href=""
-              ><svg class="clients__icon-clients" width="94px" height="44px">
-                <use href="./images/icons.svg#icon-client-logo-6"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </section>
+      <!-- постоянные клиенты -->
+      <section class="clients section">
+        <div class="container">
+          <h2 class="clients__title">Постійні клієнти</h2>
+          <ul class="clients__list-sites">
+            <li class="clients__item">
+              <a class="clients__sites" href=""
+                ><svg class="clients__icon-clients" width="41px" height="47px">
+                  <use href="./images/icons.svg#icon-client-logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients__item">
+              <a class="clients__sites" href=""
+                ><svg class="clients__icon-clients" width="40px" height="52px">
+                  <use href="./images/icons.svg#icon-client-logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients__item">
+              <a class="clients__sites" href=""
+                ><svg class="clients__icon-clients" width="43px" height="41px">
+                  <use href="./images/icons.svg#icon-client-logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients__item">
+              <a class="clients__sites" href=""
+                ><svg class="clients__icon-clients" width="84px" height="41px">
+                  <use href="./images/icons.svg#icon-client-logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients__item">
+              <a class="clients__sites" href=""
+                ><svg class="clients__icon-clients" width="63px" height="45px">
+                  <use href="./images/icons.svg#icon-client-logo-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients__item">
+              <a class="clients__sites" href=""
+                ><svg class="clients__icon-clients" width="94px" height="44px">
+                  <use href="./images/icons.svg#icon-client-logo-6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
 
     <!-- подвал-футер -->
     <footer class="footer">
@@ -582,7 +710,7 @@
               placeholder="Введіть текст"
             ></textarea>
           </label>
-          <!-- чекбокс -->
+
           <label class="label-check">
             <input
               type="checkbox"
@@ -603,7 +731,7 @@
         </form>
       </div>
     </div>
-
+    <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
