--- a/portfolio.html
+++ b/portfolio.html
@@ -349,7 +349,7 @@
             <ul class="footer__list-address">
               <li class="footer__address-item">
                 <a
-                  class="footer__address-link link"
+                  class="footer__address-link"
                   href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
